workshop03/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weatherappdp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weatherappdp
        version: v1
    spec:
      containers:
      - name: weatherappcontainer
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
