workshop03/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  weatherappdpsvc
spec:
  selector:
    app: weatherappdp
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
    targetPort:  3000
---
