workshop03/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weatherapp-vs
  namespace: default
spec:
  hosts:
  - "weather.157.230.73.80.nip.io"
  gateways:
  - weather-ingress
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherappdpsvc
  - route:
    - destination:
        host: weatherappdpsvc
